# remote_media_processing

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPER_GUIDE.md  DevelopmentStrategyDocument.md  FILE_STRUCTURE.md  GRPC_DOCKER_SYSTEM.md  PROJECT_TRACKING.md  README.md  debug_vad_audio.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  setup.py  test_cloudpickle_execution.py  test_connection.py  test_custom_library_packaging.py  test_dependency_packaging.py  test_metadata_preservation.py  test_time_based_history.py  test_time_history_logic.py  test_time_history_simple.py  test_working_system.py  webrtc.md
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  DevelopmentStrategyDocument.md  FILE_STRUCTURE.md  PHASE_3_PROJECT_TRACKING.md  streaming_generator_design.md
examples/: README.md  basic_pipeline.py  process_media_file.py  qwen_omni_assistant.py  remote_object_streaming_audio.py  remote_qwen_omni_assistant.py  remote_streaming_pipeline.py  remote_transformers_pipeline.py  remote_ultravox.py  remote_ultravox_vad_complete.py  remote_ultravox_vad_triggered.py  remote_ultravox_with_vad.py  remote_vllm_deepseek_vl.py  remote_vllm_internvl.py  remote_vllm_minicpmo.py  remote_vllm_ultravox.py  remote_whisper_transcription.py  simple_remote_test.py  state_management_example.py  test_streaming_generators.py  test_vad_simple.py  test_vad_with_remote.py  vad_ultravox_kokoro_streaming.py  webrtc_client.html  webrtc_client_with_datachannel.html  webrtc_conversation_example.py  webrtc_pipeline_server.py  webrtc_test_client_with_media_files.html  whisper_transcription.py
remote_service/: Dockerfile  docker-compose.yml  requirements.txt
remote_service/protos/: execution.proto
remote_service/scripts/: build.sh
remote_service/src/: config.py  execution_pb2.py  execution_pb2_grpc.py  executor.py  sandbox.py  server.py  signaling_server.py  types_pb2.py
remotemedia/: __init__.py
remotemedia/core/: node.py  pipeline.py
remotemedia/nodes/: __init__.py  audio.py  base.py  calculator.py  code_executor.py  custom.py  ml.py  remote.py  serialized_class_executor.py  sink.py  source.py  (+3 more)
tests/: M1_MAC_TROUBLESHOOTING.md  QUICKSTART.md  README.md  __init__.py  conftest.py  run_remote_test.py  test_all_method_types.py  test_audio_nodes.py  test_audio_pipeline.py  test_cloudpickle_execution.py  test_complex_packages.py  test_connection.py  test_custom_node_remote_execution.py  test_existing_custom_library.py  test_external_packages.py  test_kwargs.py  test_media_processing.py  test_ml_nodes.py  test_numpy_only.py  test_pipeline.py  test_remote_code_execution.py  test_remote_object_pipeline.py  test_remote_object_streaming.py  test_remote_pipeline.py  test_remote_streaming.py  test_serialized_node_execution.py  test_sink_nodes.py  test_source_nodes.py  test_streaming_generators.py  test_transparent_generators.py  test_venv_edge_cases.py  test_venv_function_calls.py  test_voice_activity_detector.py  test_webrtc.py  test_working_system.py
(+28 files in other folders)
